@@ -1,5 +1,9 @@
 2007-12-11	Frank Richter	<frank.richter@gmail.com>
 
+* Resize support.
+
+2007-12-11	Frank Richter	<frank.richter@gmail.com>
+
 * Add focusing support and proper focus management. Proper focus management is 
   required for some things such as e.g. proper caret display.
 
